user-management-rollout/resources/login/services/login-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: login
spec:
  host: login
  subsets:
    - name: v1
      labels:
        app: login
    - name: v2
      labels:
        app: login
