user-management-rollout/resources/login/services/login-virtual-svc.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: login-virtual-service
spec:
  http:
    - route:
        - destination:
            host: login
            subset: v1
          weight: 100
        - destination:
            host: login
            subset: v2
          weight: 0
